--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^5.1.0",
-    "puppeteer": "^24.9.0",
+    "puppeteer": "20.8.1",
     "dotenv": "^16.4.5"
   }
 }
